--- a/JohnsonNet/JohnsonNet.csproj
+++ b/JohnsonNet/JohnsonNet.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{118E146F-FB58-456A-B47D-B6723F51D500}</ProjectGuid>
+    <ProjectGuid>{2013303A-6C43-4E92-B9E0-E243E3F05EC0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>JohnsonNet.Base.Data</RootNamespace>
-    <AssemblyName>JohnsonNet.Base.Data</AssemblyName>
+    <RootNamespace>JohnsonNet</RootNamespace>
+    <AssemblyName>JohnsonNet</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -28,12 +28,21 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.7\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="RestSharp">
+      <HintPath>..\packages\RestSharp.105.0.1\lib\net4\RestSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Linq" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,20 +50,41 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseDataOperation.cs" />
+    <Compile Include="Config\CustomClientChannel.cs" />
+    <Compile Include="Config\Elements\EnvironmentConfig.cs" />
+    <Compile Include="Config\Elements\EnvironmentType.cs" />
+    <Compile Include="Config\Elements\Rule.cs" />
+    <Compile Include="Config\Elements\Rules.cs" />
+    <Compile Include="Config\Elements\RuleType.cs" />
+    <Compile Include="Config\Providers\ConfigurationFileProvider.cs" />
+    <Compile Include="Config\Providers\IProvider.cs" />
+    <Compile Include="Core.cs" />
+    <Compile Include="Data\BaseDataOperation.cs" />
+    <Compile Include="Data\Extensions.cs" />
+    <Compile Include="Data\FieldMapAttribute.cs" />
+    <Compile Include="Data\Linq\Extensions.cs" />
+    <Compile Include="Data\ParamDictionary.cs" />
+    <Compile Include="Data\ResultSet.cs" />
+    <Compile Include="Drawing\Captcha.cs" />
+    <Compile Include="Drawing\Extensions.cs" />
     <Compile Include="Extensions.cs" />
-    <Compile Include="FieldMapAttribute.cs" />
-    <Compile Include="ParamDictionary.cs" />
+    <Compile Include="IO\Core.cs" />
+    <Compile Include="Operation\LogOperation.cs" />
+    <Compile Include="Operation\MailOperation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ResultSet.cs" />
-    <Compile Include="ReturnSet.cs" />
+    <Compile Include="Provider.cs" />
+    <Compile Include="Serialization\Factory.cs" />
+    <Compile Include="Serialization\ISerializer.cs" />
+    <Compile Include="Serialization\JsonSerializer.cs" />
+    <Compile Include="Serialization\LowercaseContractResolver.cs" />
+    <Compile Include="Serialization\TimeSpanConverter.cs" />
+    <Compile Include="Serialization\UnixTimeStampConverter.cs" />
+    <Compile Include="Serialization\XmlSerializer.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\JohnsonNet.Config\JohnsonNet.Config.csproj">
-      <Project>{85d46843-3e1b-4fda-9e73-8432d0ed0b16}</Project>
-      <Name>JohnsonNet.Config</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
