--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\JohnsonNet.WebPages\packages.config" />
   <repository path="..\JohnsonNet\packages.config" />
+  <repository path="..\TestWeb\packages.config" />
 </repositories>
