--- a/TestWeb/TestWeb.csproj
+++ b/TestWeb/TestWeb.csproj
@@ -81,10 +81,16 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\Api\TestController.cs" />
+    <Compile Include="Global.asax.cs">
+      <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TokenAuthenticater.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -95,6 +101,20 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\JohnsonNet.WebAPI\JohnsonNet.WebAPI.csproj">
+      <Project>{adcd22c7-8beb-450f-8df1-e65f79186b41}</Project>
+      <Name>JohnsonNet.WebAPI</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\JohnsonNet.WebPages\JohnsonNet.WebPages.csproj">
+      <Project>{c84dc620-d777-40a6-9ebb-2c69417d73d6}</Project>
+      <Name>JohnsonNet.WebPages</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\JohnsonNet\JohnsonNet.csproj">
+      <Project>{2013303a-6c43-4e92-b9e0-e243e3f05ec0}</Project>
+      <Name>JohnsonNet</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
