--- a/JohnsonNet/JohnsonNet.csproj
+++ b/JohnsonNet/JohnsonNet.csproj
@@ -58,8 +58,11 @@
     <Compile Include="Config\Elements\RuleType.cs" />
     <Compile Include="Config\Providers\ConfigurationFileProvider.cs" />
     <Compile Include="Config\Providers\IProvider.cs" />
-    <Compile Include="Core.cs" />
-    <Compile Include="Data\BaseDataOperation.cs" />
+    <Compile Include="Operation\ConfigOperation.cs" />
+    <Compile Include="Operation\ConvertOperation.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Operation\DataOperation.cs" />
     <Compile Include="Data\Extensions.cs" />
     <Compile Include="Data\FieldMapAttribute.cs" />
     <Compile Include="Data\Linq\Extensions.cs" />
@@ -68,12 +71,13 @@
     <Compile Include="Drawing\Captcha.cs" />
     <Compile Include="Drawing\Extensions.cs" />
     <Compile Include="Extensions.cs" />
-    <Compile Include="IO\Core.cs" />
+    <Compile Include="Operation\IOOperation.cs" />
     <Compile Include="Operation\LogOperation.cs" />
     <Compile Include="Operation\MailOperation.cs" />
+    <Compile Include="Operation\MultiThreadOperation.cs" />
+    <Compile Include="Operation\ReflectionOperation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Provider.cs" />
-    <Compile Include="Serialization\Factory.cs" />
+    <Compile Include="JohnsonManager.cs" />
     <Compile Include="Serialization\ISerializer.cs" />
     <Compile Include="Serialization\JsonSerializer.cs" />
     <Compile Include="Serialization\LowercaseContractResolver.cs" />
