RestSharp APILog deleted

--- a/TestConsole/App.config
+++ b/TestConsole/App.config
@@ -1,19 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-  <configSections>
-    <section name="environmentConfig" type="JohnsonNet.Config.EnvironmentConfig,JohnsonNet" />
-  </configSections>
-  <environmentConfig live="~/Config/Live.config" local="~/Config/Local.config" provider="JohnsonNet.Config.ConfigurationFileProvider">
-    <rules type="ComputerName">
-      <add environment="Test" param="OGOO-4" />
-      <add environment="Test" param="TLT-054-11" />
-    </rules>
-  </environmentConfig>
-  <appSettings>
-    <add key="SmtpUser" value="hello@mruky.com" />
-    <add key="SmtpPass" value="0zeynepuky." />
-    <add key="SmtpPort" value="587" />
-    <add key="SmtpServer" value="smtp.gmail.com" />
-    <add key="SmtpEnableSSL" value="True" />
-  </appSettings>
+  <connectionStrings>
+    <clear/>
+    <add name="LocalSqlServer" connectionString="Data Source=185.4.209.156,29787;Initial Catalog=Tefal_SocailIntranet;Persist Security Info=True;User ID=sa;Password=QAWSED1q2w3e;Asynchronous Processing=True;Connect Timeout=300;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
