--- a/JohnsonNet/JohnsonNet.csproj
+++ b/JohnsonNet/JohnsonNet.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Config\Elements\RuleType.cs" />
     <Compile Include="Config\Providers\ConfigurationFileProvider.cs" />
     <Compile Include="Config\Providers\IProvider.cs" />
+    <Compile Include="Data\IgnoreAttribute.cs" />
     <Compile Include="Operation\ConfigOperation.cs" />
     <Compile Include="Operation\ConvertOperation.cs">
       <SubType>Code</SubType>
