--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\JohnsonNet.WebPages\packages.config" />
   <repository path="..\JohnsonNet\packages.config" />
+  <repository path="..\Test\packages.config" />
   <repository path="..\TestConsole\packages.config" />
   <repository path="..\TestWeb\packages.config" />
 </repositories>
