--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\JohnsonNet.Queue\packages.config" />
   <repository path="..\JohnsonNet.WebPages\packages.config" />
   <repository path="..\JohnsonNet\packages.config" />
   <repository path="..\Test\packages.config" />
-  <repository path="..\TestConsole\packages.config" />
-  <repository path="..\TestWeb\packages.config" />
 </repositories>
