--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -57,6 +57,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CouponQueue.cs" />
+    <Compile Include="JohnsonNetQueueRedisDataProvider.cs" />
+    <Compile Include="OrderQueue.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
