Test.Console added

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,5 +3,6 @@
   <repository path="..\JohnsonNet.Queue\packages.config" />
   <repository path="..\JohnsonNet.WebPages\packages.config" />
   <repository path="..\JohnsonNet\packages.config" />
+  <repository path="..\Test.Console\packages.config" />
   <repository path="..\Test\packages.config" />
 </repositories>
