Mail Provider Added

--- a/JohnsonNet.Queue/JohnsonNet.Queue.csproj
+++ b/JohnsonNet.Queue/JohnsonNet.Queue.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IJohnsonQueueErrorProvider.cs" />
     <Compile Include="IQueueParameter.cs" />
     <Compile Include="JohnsonNetQueueConfig.cs" />
     <Compile Include="IQueueEntity.cs" />
