--- a/Test.Console/App.config
+++ b/Test.Console/App.config
@@ -1,6 +1,16 @@
 <?xml version="1.0"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
-    </startup>
+  <configSections>
+    <section name="johnsonNetQueueConfig" type="JohnsonNet.Queue.JohnsonNetQueueConfig,JohnsonNet.Queue"/>
+  </configSections>
+  <johnsonNetQueueConfig dataProvider="Test.Console.JohnsonNetQueueRedisDataProvider,Test.Console" errorProvider="Test.Console.JohnsonNetQueueMailErrorProvider,Test.Console" tryCount="6">
+  </johnsonNetQueueConfig>
+  <appSettings>
+
+    <add key="redisHost" value="127.0.0.1" />
+    <add key="redisPort" value="6379" />
+  </appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+  </startup>
 </configuration>
