JohnsonNet v1.0.2.93, binding bugfix

--- a/Test.Console/App.config
+++ b/Test.Console/App.config
@@ -13,4 +13,19 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
   </startup>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="bayiSorguServiceSoap" />
+        <binding name="TypesSoap">
+          <security mode="Transport" />
+        </binding>
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="https://crm.brisa-online.com:81/Integration/Types.asmx"
+        binding="basicHttpBinding" bindingConfiguration="TypesSoap"
+        contract="BrisaTypeService.TypesSoap" name="TypesSoap" />
+    </client>
+  </system.serviceModel>
 </configuration>
