log4net helper library added

--- a/Test.Console/App.config
+++ b/Test.Console/App.config
@@ -1,31 +1,30 @@
 <?xml version="1.0"?>
 <configuration>
-  <configSections>
-    <section name="johnsonNetQueueConfig" type="JohnsonNet.Queue.JohnsonNetQueueConfig,JohnsonNet.Queue"/>
-  </configSections>
-  <johnsonNetQueueConfig dataProvider="Test.Console.JohnsonNetQueueRedisDataProvider,Test.Console" errorProvider="Test.Console.JohnsonNetQueueMailErrorProvider,Test.Console" tryCount="6">
-  </johnsonNetQueueConfig>
+  <connectionStrings>
+    <clear/>
+    <add name="LocalSqlServer" connectionString="Data Source=185.4.209.156,29787;Initial Catalog=OGOO_CMSTemplate_Sample;Persist Security Info=True;User ID=sa;Password=QAWSED1q2w3e;Asynchronous Processing=True;Connect Timeout=300;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
+    <add key="log4net.Config" value="log4net.config" />
+    <add key="log4net.Config.Watch" value="true" />
+    <add key="log4net.Internal.Debug" value="false" />
 
-    <add key="redisHost" value="127.0.0.1" />
-    <add key="redisPort" value="6379" />
+    <add key="SmtpUser" value="noreply@ogoodigital.com" />
+    <add key="SmtpPass" value="Aa123456" />
+    <add key="SmtpPort" value="587" />
+    <add key="SmtpServer" value="smtp.office365.com" />
+    <add key="SmtpEnableSSL" value="True" />
+    <add key="MailTo" value="brisaerror@ogoodigital.com"/>
+    <add key="MailSubject" value="Bridgestone - Website - Hata Mesajı"/>
   </appSettings>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
-  </startup>
-  <system.serviceModel>
-    <bindings>
-      <basicHttpBinding>
-        <binding name="bayiSorguServiceSoap" />
-        <binding name="TypesSoap">
-          <security mode="Transport" />
-        </binding>
-      </basicHttpBinding>
-    </bindings>
-    <client>
-      <endpoint address="https://crm.brisa-online.com:81/Integration/Types.asmx"
-        binding="basicHttpBinding" bindingConfiguration="TypesSoap"
-        contract="BrisaTypeService.TypesSoap" name="TypesSoap" />
-    </client>
-  </system.serviceModel>
+  <system.diagnostics>
+    <trace autoflush="true">
+      <listeners>
+        <add
+         name="textWriterTraceListener"
+         type="System.Diagnostics.TextWriterTraceListener"
+         initializeData="C:\Users\Sercan\Desktop\log4net.txt" />
+      </listeners>
+    </trace>
+  </system.diagnostics>
 </configuration>
