--- a/Test.Console/Test.Console.csproj
+++ b/Test.Console/Test.Console.csproj
@@ -35,6 +35,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net, Version=1.2.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.2.0.5\lib\net40-full\log4net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.6.0.7\lib\net40\Newtonsoft.Json.dll</HintPath>
@@ -62,26 +66,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CouponQueue.cs" />
-    <Compile Include="JohnsonNetQueueMailErrorProvider.cs" />
-    <Compile Include="JohnsonNetQueueRedisDataProvider.cs" />
-    <Compile Include="OrderQueue.cs" />
+    <Compile Include="JohnsonSmtpAppenderTemplate.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service References\BrisaTypeService\Reference.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="LogMailTemplate.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
+    <Content Include="log4net.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
-    <None Include="Service References\BrisaTypeService\Types.wsdl" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\JohnsonNet.log4net\JohnsonNet.log4net.csproj">
+      <Project>{d635f3c1-bae6-461a-9253-6ab59468de4f}</Project>
+      <Name>JohnsonNet.log4net</Name>
+    </ProjectReference>
     <ProjectReference Include="..\JohnsonNet.Queue\JohnsonNet.Queue.csproj">
       <Project>{4b61af98-149f-4bc7-b4d9-fc8534e9f720}</Project>
       <Name>JohnsonNet.Queue</Name>
@@ -93,24 +98,6 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadataStorage Include="Service References\BrisaTypeService\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Service References\BrisaTypeService\Types.disco" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Service References\BrisaTypeService\configuration91.svcinfo" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Service References\BrisaTypeService\configuration.svcinfo" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Service References\BrisaTypeService\Reference.svcmap">
-      <Generator>WCF Proxy Generator</Generator>
-      <LastGenOutput>Reference.cs</LastGenOutput>
-    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
