--- a/Test.Console/packages.config
+++ b/Test.Console/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="log4net" version="2.0.5" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="6.0.7" targetFramework="net40" />
   <package id="NServiceKit.Common" version="1.0.31" targetFramework="net40" />
   <package id="NServiceKit.Redis" version="1.0.17" targetFramework="net40" />
