JohnsonNet log4net added

--- a/Test.Console/App.config
+++ b/Test.Console/App.config
@@ -14,8 +14,8 @@
     <add key="SmtpPort" value="587" />
     <add key="SmtpServer" value="smtp.office365.com" />
     <add key="SmtpEnableSSL" value="True" />
-    <add key="MailTo" value="brisaerror@ogoodigital.com"/>
-    <add key="MailSubject" value="Bridgestone - Website - Hata Mesajı"/>
+    <add key="MailTo" value="sercanakmaz@ogoodigital.com"/>
+    <add key="MailSubject" value="JohnsonNet Test Console"/>
   </appSettings>
   <system.diagnostics>
     <trace autoflush="true">
