--- a/JohnsonNet.log4net/JohnsonNet.log4net.csproj
+++ b/JohnsonNet.log4net/JohnsonNet.log4net.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,12 +48,16 @@
     <Compile Include="Appender\CountAppenderProxy.cs" />
     <Compile Include="Appender\FallbackAppender.cs" />
     <Compile Include="Appender\FallbackAppenderProxyBase.cs" />
+    <Compile Include="Appender\IJohnsonDataCustomTypeHandler.cs" />
     <Compile Include="Appender\IJohnsonSmtpAppenderTemplate.cs" />
     <Compile Include="Appender\IndefiniteAppenderProxy.cs" />
     <Compile Include="Appender\JohnsonDataAppender.cs" />
+    <Compile Include="Appender\JohnsonDataCustomTypeParameter.cs" />
     <Compile Include="Appender\JohnsonSmtpAppender.cs" />
     <Compile Include="Appender\RecordingErrorHandler.cs" />
     <Compile Include="Appender\TimeAppenderProxy.cs" />
+    <Compile Include="ApplicationPatternConverter.cs" />
+    <Compile Include="EnvironmentPatternConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemDateTime.cs" />
   </ItemGroup>
