--- a/Test.Web/Web.config
+++ b/Test.Web/Web.config
@@ -1,13 +1,22 @@
 ﻿<?xml version="1.0"?>
-
-<!--
-  For more information on how to configure your ASP.NET application, please visit
-  http://go.microsoft.com/fwlink/?LinkId=169433
-  -->
-
 <configuration>
-    <system.web>
-      <compilation debug="true" targetFramework="4.0" />
-    </system.web>
-
+  <connectionStrings>
+    <clear/>
+    <add name="LocalSqlServer" connectionString="Data Source=185.4.209.156,29787;Initial Catalog=OGOO_CMSTemplate_Sample;Persist Security Info=True;User ID=sa;Password=QAWSED1q2w3e;Asynchronous Processing=True;Connect Timeout=300;" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
+  <appSettings>
+    <add key="log4net.Config" value="log4net.config"/>
+    <add key="log4net.Config.Watch" value="true"/>
+    <add key="log4net.Internal.Debug" value="false"/>
+    <add key="SmtpUser" value="noreply@ogoodigital.com"/>
+    <add key="SmtpPass" value="Aa123456"/>
+    <add key="SmtpPort" value="587"/>
+    <add key="SmtpServer" value="smtp.office365.com"/>
+    <add key="SmtpEnableSSL" value="True"/>
+    <add key="MailTo" value="sercanakmaz@ogoodigital.com"/>
+    <add key="MailSubject" value="JohnsonNet Test Console"/>
+  </appSettings>
+  <system.web>
+    <compilation debug="true"/>
+  </system.web>
 </configuration>
